add performance test